Set treelist items to position:realtive to correctly align toggle icons

--- a/skins/classic/common.css
+++ b/skins/classic/common.css
@@ -622,6 +622,11 @@ table.records-table tr.unfocused td
   background-color: #929292;
 }
 
+ul.treelist li
+{
+  position: relative;
+}
+
 ul.treelist li div.treetoggle
 {
   position: absolute;
